# v-flask

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
docs/: API-AUTHENTICATION.md  ARCHITECTURE.md  AUTH-SYSTEM.md  CLI.md  COMPONENTS.md  CONTENT-SLOTS.md  HELP-SYSTEM.md  IMPLEMENTATION-CHECKLIST.md  LOGGING.md  MARKETPLACE.md  PLUGIN-DEVELOPMENT.md  PLUGINS.md  PRD-MIGRATION.md  TEMPLATES.md  deployment_bootstrapping.md
docs/Plugins/: PLUGIN_Reservierung.md
docs/deployment_bootstrapping/: README.md  VRS_API_INTEGRATIONS.md  VRS_DEPLOYMENT_SPEC.md  VRS_MODELS_SPEC.md  VRS_ORCHESTRATOR_SPEC.md
marketplace/: .env.example  README.md  pyproject.toml
marketplace/app/: __init__.py  config.py
marketplace/app/models/: __init__.py  license.py  license_history.py  order.py  plugin_category.py  plugin_meta.py  plugin_price.py  plugin_version.py  project.py  project_type.py
marketplace/app/routes/: __init__.py  admin.py  api.py  auth.py  shop.py
marketplace/app/services/: __init__.py  plugin_packager.py  plugin_scanner.py  pricing.py  trial.py
marketplace/app/templates/admin/: base.html  dashboard.html
marketplace/app/templates/admin/categories/: form.html  list.html
marketplace/app/templates/admin/licenses/: form.html  history.html  history_detail.html  list.html
marketplace/app/templates/admin/plugins/: form.html  list.html  prices.html
marketplace/app/templates/admin/plugins/versions/: form.html  list.html
marketplace/app/templates/admin/project_types/: form.html  list.html
marketplace/app/templates/admin/projects/: detail.html  form.html  list.html
marketplace/app/templates/auth/: login.html
marketplace/app/templates/shop/: plugin_detail.html  plugin_list.html
marketplace/docs/prd/: 05_admin_marketplace_erweiterung.md
marketplace/migrations/versions/: 0d227417b23b_add_plugincategory_table_and_extend_.py  516421db44a2_add_allow_one_time_purchase_to_.py  5c2052a7c3c4_add_is_base_type_to_projecttype.py  a39cc69515de_add_is_superadmin_to_project.py  ce95b04ec33c_initial_marketplace_models.py  fa26e523fd75_add_projecttype_pluginprice_.py  fb6e2ea801cc_add_phase_field_to_pluginmeta.py
src/v_flask/: __init__.py  cli.py  extensions.py
src/v_flask/admin/: __init__.py  routes.py
src/v_flask/api/: __init__.py  jwt.py
src/v_flask/auth/: __init__.py  decorators.py  routes.py
src/v_flask/bundles/: __init__.py  manifest.py  registry.py
src/v_flask/content_slots/: __init__.py  models.py  service.py
src/v_flask/data/: plugins_marketplace.json
src/v_flask_plugins/: __init__.py
tests/: __init__.py  conftest.py  test_betreiber.py  test_cli.py  test_datenschutz_plugin.py  test_fragebogen_plugin.py  test_impressum_plugin.py  test_kontakt_plugin.py  test_logging_service.py  test_lookup_wert.py  test_modul.py  test_plugin_manager.py  test_plugins.py  test_projektverwaltung_plugin.py  test_templates.py
tests/ui/: README.md
v-flask-plugin-shop/: vflask_shop_anforderungen.md
(+403 files in other folders)
