[project]
name = "v-flask-marketplace"
version = "0.1.0"
description = "V-Flask Plugin Marketplace - License and distribution management"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0",
    "flask-migrate>=4.0",
    "flask-login>=0.6",
    "flask-wtf>=1.2",
    "python-dotenv>=1.0",
    # v-flask as local dependency (parent directory)
    "v-flask",
    # Stripe for payments (Phase 4)
    # "stripe>=7.0",
    "pillow>=12.1.0",
]

[tool.uv.sources]
v-flask = { path = "..", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
